using object-fit css rule to fix distorted image on phone screens

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -62,11 +62,9 @@ body {
   position: absolute;
   z-index: 0;
 
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  object-fit: cover;
 
-  opacity: 0.5;
+  opacity: 0.6;
 }
 
 .container {
